--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,12 @@ services:
       - DJANGO_SUPERUSER_EMAIL=admin@example.com
     volumes:
       - ./app/:/usr/src/app/
-    ports:
-      - 8000:8000
+      - ./app/staticfiles:/home/app/web/staticfiles
+    
+    # ports:
+    #   - 8000:8000
+    expose:
+    - 8000
     env_file:
       - ./.env.dev
     depends_on:
@@ -25,6 +29,14 @@ services:
       - POSTGRES_USER=hello_django
       - POSTGRES_PASSWORD=hello_django
       - POSTGRES_DB=hello_django_dev
+  nginx:
+    build: ./nginx
+    volumes:
+      - ./app/staticfiles:/home/app/web/staticfiles
+    ports:
+      - 1337:80
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
